# anki-lingq

./: .envrc  Cargo.toml
.cache/: lesson-17470680.json  lesson-17470692.json  lessons.json
src/: anki.rs  components.rs  from_network.rs  lingq.rs  main.rs
src/components/: app.rs  lesson.rs  popup.rs
src/components/popup/: lingq.rs  sync.rs
