[package]
name = "anki-lingq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive", "env"] }
dioxus = { version = "0.2.4", features = ["desktop", "fermi"] }
dioxus-helmet = "0.2.4"
itertools = "0.10.5"
maplit = "1.0.2"
poll-promise = { version = "0.2.0", features = ["tokio"] }
regex = "1.7.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
serde_repr = "0.1.9"
sir = { version = "0.2.2", features = ["dioxus"] }
tl = "0.7.7"
# tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
